[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/agrofox.png" type="Texture" id=1]
[ext_resource path="res://UI/disk2.png" type="Texture" id=2]
[ext_resource path="res://GameTheme.tres" type="Theme" id=3]
[ext_resource path="res://UI/sound_icons.png" type="Texture" id=5]
[ext_resource path="res://UI/trophy3.png" type="Texture" id=6]
[ext_resource path="res://SongOption.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.0784314 )
border_color = Color( 0.988235, 0.121569, 0.74902, 0.737255 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20

[node name="SongOption" type="Control"]
margin_right = 597.0
margin_bottom = 100.0
rect_min_size = Vector2( 580, 100 )
theme = ExtResource( 3 )
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
margin_left = 5.0
margin_right = 585.0
margin_bottom = 90.0
custom_styles/panel = SubResource( 1 )

[node name="HBoxC" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 58.0

[node name="IconC" type="Control" parent="HBoxC"]
margin_right = 120.0
margin_bottom = 90.0
rect_min_size = Vector2( 120, 90 )

[node name="Disk1" type="Sprite" parent="HBoxC/IconC"]
visible = false
position = Vector2( 70, 45 )
rotation = 0.523599
scale = Vector2( 0.45, 0.35 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SongIcon" type="Sprite" parent="HBoxC/IconC"]
visible = false
position = Vector2( 64, 45 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="Disk2" type="Sprite" parent="HBoxC/IconC"]
position = Vector2( 64, 46 )
rotation = 0.586431
scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 409.876, 411.803, 217.921, 212.732 )

[node name="Info" type="VBoxContainer" parent="HBoxC"]
margin_left = 124.0
margin_right = 574.0
margin_bottom = 90.0
rect_min_size = Vector2( 450, 0 )

[node name="Artist" type="Label" parent="HBoxC/Info"]
margin_right = 450.0
margin_bottom = 25.0
text = "Vic Rock"
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="HBoxC/Info"]
margin_top = 29.0
margin_right = 450.0
margin_bottom = 54.0
text = "Song name here"
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="HBoxC/Info"]
margin_top = 58.0
margin_right = 450.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 10 )

[node name="ProgressBar" type="HBoxContainer" parent="HBoxC/Info"]
margin_top = 72.0
margin_right = 450.0
margin_bottom = 72.0

[node name="Control2" type="CenterContainer" parent="HBoxC/Info"]
margin_top = 76.0
margin_right = 450.0
margin_bottom = 76.0

[node name="SectionsC" type="VBoxContainer" parent="."]
margin_left = 92.0
margin_top = 91.0
margin_right = 132.0
margin_bottom = 131.0

[node name="LastRecord" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -150.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 90 )

[node name="Score" type="Label" parent="LastRecord"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -25.0
margin_right = 60.0
text = "$1,000,000"

[node name="Sprite" type="Sprite" parent="LastRecord"]
position = Vector2( 69, 30 )
scale = Vector2( 0.2, 0.15 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 1220.37, 450.062, 435.868, 607.816 )
